--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,11 @@ decorator==5.1.1
 Django==3.2.13
 django-appconf==1.0.5
 django-bootstrap5==22.1
+django-braces==1.15.0
 django-extensions==3.2.1
 django-imagekit==4.1.0
+django-model-utils==4.2.0
+django-star-ratings==0.9.2
 executing==1.1.0
 idna==3.3
 ipython==8.5.0
@@ -30,10 +33,12 @@ prompt-toolkit==3.0.31
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.13.0
+pytz==2022.6
 requests==2.28.1
 six==1.16.0
 sqlparse==0.4.3
 stack-data==0.5.1
+swapper==1.3.0
 tomli==2.0.1
 traitlets==5.4.0
 typing_extensions==4.3.0
