--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-braces==1.15.0
 django-extensions==3.2.1
 django-imagekit==4.1.0
 django-model-utils==4.2.0
+django-social-share==2.3.0
 django-star-ratings==0.9.2
 executing==1.1.0
 idna==3.3
